--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,25 @@
 Package: aLBI
 Type: Package
-Title: Simole r package for fish stock assessment
+Title: Length-Based Indicators for Fish Stock Assessment
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <ataher.cu.ms@gmail.com>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: [Ataher ali] <ataher.cu.ms@.com>
+Maintainer: [Ataher ali] <ataher.cu.ms@.com>
+Description: This package provides tools for calculating length-based indicators for fish stock assessment using length frequency data and bootstrap resampling. It includes functions for data validation, parameter estimation, and stock status assessment.
+Depends:
+    R (>= 3.5.0)
+Imports:
+    dplyr,
+    ggplot2,
+    readxl,
+    stats
+Suggests:
+    testthat,
+    knitr,
+    rmarkdown
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
-Suggests: 
-    knitr,
-    rmarkdown,
-    testthat (>= 3.0.0)
-VignetteBuilder: knitr
-Config/testthat/edition: 3
-Roxygen: list(markdown = TRUE)
+URL1: https://github.com/Ataher76/aLBI
+URL2: https://orcid.org/my-orcid?orcid=0009-0008-8780-0903
+BugReports: https://github.com/Ataher76/aLBI/issues
+RoxygenNote: 7.1.1
