--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,7 @@ Title: aLBI - a simple r package for estimating Length-Based Indicators and Fish
 Version: 0.1.0
 Authors@R: c(
     person("Ataher", "Ali", email = "ataher.cu.ms@gmail.com", role = c("aut", "cre")),
-    person("Alam", "Mohammed Shahidul", email = "alamms@cu.ac.bd", role = "aut")
-)
-
+    person("Alam", "Mohammed Shahidul", email = "alamms@cu.ac.bd", role = "aut"))
 Maintainer: Ataher Ali <ataher.cu.ms@gmail.com>
 Description: This package provides tools for calculating length-based indicators for fish stock assessment using length frequency data and bootstrap resampling. It includes functions for data validation, parameter estimation, and stock status assessment.
 Depends: R (>= 3.5.0)
