--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,19 @@
 Package: aLBI
 Type: Package
-Title: aLBI - A Simple R Package for Estimating Length-Based Indicators and Fish Stock Assessment
-Version: 0.1.1
+Title: A Simple R Package for Estimating Length-Based Indicators and Fish Stock Assessment from Length Frequency Data
+Version: 0.1.2
 Authors@R: c(
     person("Ataher", "Ali", email = "ataher.cu.ms@gmail.com", role = c("aut", "cre")),
     person("Alam", "Mohammed Shahidul", email = "alamms@cu.ac.bd", role = "aut"))
 Maintainer: Ataher Ali <ataher.cu.ms@gmail.com>
-Description: This package provides functions for estimating length-based indicators and assessing fish stock.
+Description: Provides functions for estimating length-based indicators and assessing fish stock.
 Depends: R (>= 3.5.0)
 Suggests: 
     testthat, 
     knitr, 
-    rmarkdown
+    rmarkdown,
+    devtools,
+    readxl
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
@@ -19,4 +21,3 @@ URL: https://github.com/Ataher76/aLBI
 BugReports: https://github.com/Ataher76/aLBI/issues
 RoxygenNote: 7.3.1
 VignetteBuilder: knitr
-SubmissionComment: Resubmitting after addressing issues pointed out by CRAN team. Fixed documentation and data loading issues.
