--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Suggests:
     knitr, 
     rmarkdown,
     devtools,
-     readxl
+     readxl,
+     openxlsx
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
