--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,14 @@ export(FrequencyTable)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
+importFrom(dplyr,select)
 importFrom(dplyr,summarise)
-importFrom(dplyr,ungroup)
+importFrom(grDevices,dev.cur)
+importFrom(grDevices,dev.new)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
+importFrom(grDevices,rgb)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,barplot)
@@ -20,9 +26,14 @@ importFrom(graphics,par)
 importFrom(graphics,rect)
 importFrom(graphics,segments)
 importFrom(graphics,text)
+importFrom(openxlsx,write.xlsx)
 importFrom(stats,complete.cases)
 importFrom(stats,density)
 importFrom(stats,loess)
 importFrom(stats,na.omit)
 importFrom(stats,predict)
 importFrom(stats,quantile)
+importFrom(stats,rnorm)
+importFrom(utils,install.packages)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
