--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(FishPar)
 export(FishSS)
 export(FrequencyTable)
+export(LWR)
+import(ggplot2)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
@@ -27,12 +29,15 @@ importFrom(graphics,rect)
 importFrom(graphics,segments)
 importFrom(graphics,text)
 importFrom(openxlsx,write.xlsx)
+importFrom(stats,coef)
 importFrom(stats,complete.cases)
 importFrom(stats,density)
+importFrom(stats,lm)
 importFrom(stats,loess)
 importFrom(stats,na.omit)
 importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,rnorm)
+importFrom(utils,globalVariables)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
